--- a/DeliverySite/DeliverySite/Views/Home/Index.cshtml
+++ b/DeliverySite/DeliverySite/Views/Home/Index.cshtml
@@ -12,14 +12,14 @@
     {
         Layout = "~/Views/Shared/_LayoutCompanies.cshtml";
     }
-    //else
-    //{
-    //    Layout = "~/Views/Shared/_Layout.cshtml";
+    else
+    {
+        Layout = "~/Views/Shared/_Layout.cshtml";
 
-    //}
+    }
 }
 
-@*<style>
+<style>
         .test {
             background-image: url('https://shopee.co.id/inspirasi-shopee/wp-content/uploads/2018/09/express-delivery.jpg');
             background-size: cover;
@@ -58,9 +58,9 @@
 
     </div>
 
-    <script src="~/Scripts/bootstrap-accessibility.min.js"></script>*@
+    <script src="~/Scripts/bootstrap-accessibility.min.js"></script>
 
-<!DOCTYPE html>
+@*<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -546,4 +546,4 @@
         </div>
     </div>
 </body>
-</html>
+</html>*@
